# TicTacToe

./: CMakeLists.txt  HeuristicExtremeValues.cpp  HeuristicExtremeValues.h  Heuristics.h  Line.cpp  Line.h  Player.h  README.md  TicTacField.cpp  TicTacField.h  TicTacFieldDefinitions.h  application.h  commons.cpp  commons.h  heuristics.cpp  heuristicsweights.h  main.cpp  myconcepts.h
